php/todo-list-php-dasar/Test/tempCodeRunnerFile.php
<?php
// Anda bisa menggunakan __DIR__ untuk memastikan bahwa jalur yang Anda gunakan adalah absolut dan sesuai dengan lokasi file saat ini. Contohnya
// require_once __DIR__. "/../Model/TodoList.php"; // error
// // require_once "/home/fanxx/Coding/study/php/todo-list-php-dasar/Model/TodoList.php";

// require_once __DIR__ . "/../BusinessLogic/ShowTodoList.php"; //error
// // require_once "test.txt"; //tidak error


// $todoList[1] = "Belajar PHP Dasar";
// $todoList[2] = "Belajar PHP OOP";
// $todoList[3] = "Belajar PHP Database";

// showTodoList();